--- a/_posts/0000-01-02-zeus-g.md
+++ b/_posts/0000-01-02-zeus-g.md
@@ -1,7 +1,8 @@
 ---
-
 layout: slide
 title: "Welcome to our second slide!"
----something new
+---
+
+something new
 Your text
 Use the left arrow to go back!
